2011-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/clock01.c, psxhdrs/clock02.c, psxhdrs/clock03.c,
	psxhdrs/clock04.c, psxhdrs/clock05.c, psxhdrs/clock06.c:
	Let test() return values (avoid warnings).

2011-10-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/signal23.c: Add comment to denote test as obsolete.
	* configure.ac: Check for size of mode_t.
	* psxfile01/test.c, psxstat/test.c: Include "primode.h".
	Use PRIomode_t to print mode_t.

2011-10-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxaio01/system.h, psxaio02/system.h, psxaio03/system.h: Do not use
	the stack checker.

2011-10-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxhdrs/sync01.c, psxhdrs/sync02.c: Let test() return values
	(avoid warnings).
	* psxhdrs/time01.c, psxhdrs/time02.c, psxhdrs/time03.c,
	psxhdrs/time04.c, psxhdrs/time05.c, psxhdrs/time06.c,
	psxhdrs/time07.c, psxhdrs/time08.c, psxhdrs/time09.c,
	psxhdrs/time10.c, psxhdrs/time11.c, psxhdrs/time12.c,
	psxhdrs/time13.c: Let test() return values (avoid warnings).
	* psxhdrs/timer01.c, psxhdrs/timer02.c, psxhdrs/timer03.c,
	psxhdrs/timer04.c, psxhdrs/timer05.c, psxhdrs/timer06.c,
	psxhdrs/timer07.c: Let test() return values (avoid warnings).

2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psx01/init.c, psx07/init.c, psx09/init.c, psx12/init.c,
	psxclock/init.c, psxtimer01/psxtimer.c: Include "pritime.h".
	Use PRIdtime_t to print time_t.

2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Check for size of time_t.

2011-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psx16/init.c, psxclassic01/init.c, psxeintr_join/init.c:
	Add HAVE_CONFIG_H.

2011-09-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* psxfatal01/psxfatal01.scn, psxfatal01/testcase.h,
	psxfatal02/psxfatal02.scn, psxfatal02/testcase.h,
	psxfatal_support/init.c: Print proper begin and end message.

2011-08-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1890/cpukit