@@ -22,12 +22,14 @@
 #error "rtems is supposed to have pthread_key_delete"
 #endif
 
-void test( void );
+int test( void );
 
-void test( void )
+int test( void )
 {
   pthread_key_t    key = 0;
   int              result;
 
   result = pthread_key_delete( key );
+  
+  return result;
 }
